cmake_minimum_required(VERSION 3.16)
project(RSA)
set(CMAKE_CXX_STANDARD 17)
if(MSVC)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
else()
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-sign-compare")
endif(MSVC)

# find_package(glog REQUIRED)
find_package(GTest REQUIRED)
find_package(SystemCLanguage CONFIG REQUIRED)
find_package(Boost REQUIRED)

include_directories(vtuber include)
enable_testing()
add_subdirectory(vtuber)
add_subdirectory(cmodel)
add_subdirectory(systemc)
add_subdirectory(verilog)
