cmake_minimum_required(VERSION 3.16)
add_library(RSASystemCModel RSATwoPowerMod.cpp RSAMontgomery.cpp RSA256.cpp)
add_executable(RSATwoPowerMod_test RSATwoPowerMod_test.cpp)
add_executable(RSAMontgomery_test RSAMontgomery_test.cpp)
add_executable(RSA256_test RSA256_test.cpp)
set(LINKME glog SystemC::systemc RSASystemCModel)
target_link_libraries(RSATwoPowerMod_test ${LINKME})
target_link_libraries(RSAMontgomery_test ${LINKME})
target_link_libraries(RSA256_test ${LINKME})
add_test(RSATwoPowerMod_test RSATwoPowerMod_test)
add_test(RSAMontgomery_test RSAMontgomery_test)
add_test(RSA256_test RSA256_test)
