cmake_minimum_required(VERSION 3.16)
add_library(RSASystemCModel TwoPower.cpp RSAMontgomery.cpp RSAMont.cpp RSA256.cpp)
add_executable(TwoPower_test TwoPower_test.cpp)
add_executable(RSAMontgomery_test RSAMontgomery_test.cpp)
add_executable(RSAMont_test RSAMont_test.cpp)
add_executable(RSA256_test RSA256_test.cpp)
set(LINKME glog SystemC::systemc RSASystemCModel)
target_link_libraries(TwoPower_test ${LINKME})
target_link_libraries(RSAMontgomery_test ${LINKME})
target_link_libraries(RSAMont_test ${LINKME})
target_link_libraries(RSA256_test ${LINKME})
add_test(TwoPower_test TwoPower_test)
add_test(RSAMontgomery_test RSAMontgomery_test)
add_test(RSAMont_test RSAMont_test)
add_test(RSA256_test RSA256_test)
