cmake_minimum_required(VERSION 3.16)
add_library(RSASystemCModel TwoPower.cpp Montgomery.cpp RSAMont.cpp RSA.cpp)
add_executable(TwoPower_test TwoPower_test.cpp)
add_executable(Montgomery_test Montgomery_test.cpp)
add_executable(RSAMont_test RSAMont_test.cpp)
add_executable(RSA_test RSA_test.cpp)
set(LINKME glog SystemC::systemc RSASystemCModel)
target_link_libraries(TwoPower_test ${LINKME})
target_link_libraries(Montgomery_test ${LINKME})
target_link_libraries(RSAMont_test ${LINKME})
target_link_libraries(RSA_test ${LINKME})
add_test(TwoPower_test TwoPower_test)
add_test(Montgomery_test Montgomery_test)
add_test(RSAMont_test RSAMont_test)
add_test(RSA_test RSA_test)

# v2
add_test(nsc_twopower nsc_twopower)
add_executable(nsc_twopower TwoPower_NSC.cpp)
target_link_libraries(nsc_twopower glog gtest_main gtest)

add_test(nsc_montgomery nsc_montgomery)
add_executable(nsc_montgomery Montgomery_NSC.cpp)
target_link_libraries(nsc_montgomery glog gtest_main gtest)
