cmake_minimum_required(VERSION 3.16)
find_package(verilator HINTS $ENV{VERILATOR_ROOT})
set(TWO_POWER_MOD_SIM VRSATwoPowerMod)
set(MONTGOMERY_SIM VRSAMontgomery)
set(RSAMONT_SIM VRSAMont)
set(RSA_SIM VRSA)

add_executable(${TWO_POWER_MOD_SIM} RSATwoPowerMod_sim.cpp)
add_executable(${MONTGOMERY_SIM} RSAMontgomery_sim.cpp)
add_executable(${RSAMONT_SIM} RSAMont_sim.cpp)
add_executable(${RSA_SIM} RSA256_sim.cpp)

set(LINKME PRIVATE SystemC::systemc glog RSASystemCModel)
target_link_libraries(${TWO_POWER_MOD_SIM} ${LINKME})
target_link_libraries(${MONTGOMERY_SIM} ${LINKME})
target_link_libraries(${RSAMONT_SIM} ${LINKME})
target_link_libraries(${RSA_SIM} ${LINKME})

verilate(${TWO_POWER_MOD_SIM} TRACE_FST PREFIX VRSATwoPowerMod SOURCES RSA_pkg.sv RSATwoPowerMod.sv)
verilate(${MONTGOMERY_SIM} TRACE_FST PREFIX VRSAMontgomery SOURCES RSA_pkg.sv RSAMontgomery.sv)
verilate(${RSAMONT_SIM} TRACE_FST PREFIX VRSAMont SOURCES RSA_pkg.sv RSAMont.sv)
verilate(${RSA_SIM} TRACE_FST PREFIX VRSA SOURCES RSA_pkg.sv RSA.sv)

add_test(${TWO_POWER_MOD_SIM} ${TWO_POWER_MOD_SIM})
add_test(${MONTGOMERY_SIM} ${MONTGOMERY_SIM})
add_test(${RSAMONT_SIM} ${RSAMONT_SIM})
add_test(${RSA_SIM} ${RSA_SIM})

configure_file(RSA256_m.in . COPYONLY)
configure_file(RSA256_c.in . COPYONLY)
